<resources>

    <string name="app_name">ItsMyLife</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="send">发送</string>
    <string name="generate">生成</string>
    
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码</string>
        
    <string name="todo_list">Todo List</string>
    <string name="tally">记账</string>
    
    <string name="qr_code_hint">请输入要生成的二维码链接</string>

    <string name="decode">解密</string>
    <string name="encode">加密</string>
    <string name="share">分享</string>
    <string name="key">密钥：</string>
    <string name="content">内容：</string>

    <string name="key_is_empty">密钥为空！！</string>
    <string name="content_is_empty">内容为空！！</string>
    <string name="encode_failed">编码失败，请重试~</string>
    <string name="key_or_content_is_null">内容或者密钥为空，请重试~</string>
    <string name="decode_failed">解码失败，请重试~</string>

    <string name="target_phone_num_is_null">发送目标手机号为空，请填写~</string>
    <string name="message_content_is_null">发送内容为空，请填写~</string>
    <string name="send_message">发送短信</string>

</resources>
